hphp/hack/test/typecheck/new_inference/transitive_error.php.like_types.exp
File "transitive_error.php", line 28, characters 11-12:
Invalid argument (Typing[4110])
File "transitive_error.php", line 14, characters 19-19:
Some type constraint(s) are violated here
File "transitive_error.php", line 14, characters 19-19:
T is a constrained type parameter
File "transitive_error.php", line 18, characters 18-18:
Expected D
File "transitive_error.php", line 14, characters 19-19:
But got dynamic
